# Daily-Metal-Prices

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  api_call.py  docker-compose.yaml  initialize.py  main.py  models.py  pyproject.toml  test_label_check_failed.md
.github/: dependabot.yml  test_label_check_failed.md
.github/workflows/: conventional_commit_checker.yaml  label_checker.yaml  lable_checker.yaml  quality.yaml  quality.yml  upload_docker.yaml  version.yaml
metals/: metal_prices.py  metals.py  models.py
metals/.github/workflows/: quality.yaml
test/: test_functional.py
